--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -4,9 +4,17 @@
         <title>{% block title %}{% endblock %}</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
     <body>
+        <section class="section">
+            <div class="container">
+              <h1 class="title">
+                Thoughts
+              </h1>
+            </div>
+          </section>
         {% block body %}{% endblock %}
     </body>
 </html>
