add untested code for automatically adding images

--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -4,5 +4,6 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='js/drafting.css') }}">
     <div id="editor"></div>
+	<div id="images"></div>
     <script src="{{ url_for('static', filename='js/drafting.js') }}"></script>
 {% endblock %}
