--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        {% block head %}
+        {% endblock %}
     </head>
     <body>
         <section class="section">
