focus code after email entered

--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -57,6 +57,7 @@
             console.log('success')
             email.classList.add("is-success");
             codeForm.hidden = false;
+            code.focus();
         } else {
             email.classList.add("is-danger");
             console.log('error')
