beginning editor code

--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -4,7 +4,9 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='js/drafting.css') }}">
 {% endblock %}
 {% block body %}
+    <!-- <div id="editor"></div>
+    <div id="images"></div> -->
     <div id="editor"></div>
-	<div id="images"></div>
+    <div id="svelte"></div>
     <script src="{{ url_for('static', filename='js/drafting.js') }}"></script>
 {% endblock %}
