fix bugs and add code for image generation

--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -4,9 +4,11 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='js/drafting.css') }}">
 {% endblock %}
 {% block body %}
-    <!-- <div id="editor"></div>
-    <div id="images"></div> -->
-    <div id="editor"></div>
-    <div id="svelte"></div>
-    <script src="{{ url_for('static', filename='js/drafting.js') }}"></script>
+    <div id="main">
+		<!-- <div id="editor"></div>
+		<div id="images"></div> -->
+		<div id="editor"></div>
+		<div id="svelte"></div>
+		<script src="{{ url_for('static', filename='js/drafting.js') }}"></script>
+	</div>
 {% endblock %}
