fix some bugs and improve image generation on frontend

--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -7,8 +7,9 @@
     <div id="main">
 		<!-- <div id="editor"></div>
 		<div id="images"></div> -->
-		<div id="editor"></div>
+		<div id="editor" style="background: blue"></div>
 		<div id="svelte"></div>
+		<div id="images"></div>
 		<script src="{{ url_for('static', filename='js/drafting.js') }}"></script>
 	</div>
 {% endblock %}
