--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -14,7 +14,7 @@
         <section class="section">
             <div class="container">
               <h1 class="title">
-                Thoughts
+				  <a href="/">Thoughts</a>
               </h1>
             </div>
           </section>
