--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -7,7 +7,9 @@
     <div id="main">
 		<!-- <div id="editor"></div>
 		<div id="images"></div> -->
-		<div id="editor" style="background: blue"></div>
+		<h1 style="font-size: 30px">Create post</h1>
+		<div id="editor"></div>
+		<input type="submit" id="submit">
 		<div id="svelte"></div>
 		<div id="images"></div>
 		<script src="{{ url_for('static', filename='js/drafting.js') }}"></script>
