--- a/hackathon/templates/timeline.html
+++ b/hackathon/templates/timeline.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
 {% block title %}timeline{% endblock %}
 {% block body %}
-	<div id="main">
-		<a href="/post">Create a post</a>
-		{% for post in posts %}
-			<article class="message">
-				<div class="message-header">
-					{{ post[1] }}
-				</div>
-				<div class="message-body">
-					{{ post[0] | safe }}
-				</div>
-			</article>
-		{% endfor %}
-	</div>
+<div id="main">
+    <a href="/post">Create a post</a>
+    {% for post in posts %}
+    <article class="message">
+        <div class="message-header has-addons">
+            <div class="control">
+                {{ post[1] }}
+            </div>
+            <div class="control">
+                {{ post[2] }}
+            </div>
+        </div>
+        <div class="message-body">
+            {{ post[0] | safe }}
+        </div>
+    </article>
+    {% endfor %}
+</div>
 {% endblock %}
