--- a/hackathon/templates/drafting.html
+++ b/hackathon/templates/drafting.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% set logged_in = True %}
+
 {% block title %}new post{% endblock %}
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='js/drafting.css') }}">
