--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% set logged_in = False %}
+
 {% block title %}sign up page{% endblock %}
 {% block body %}
 <div id="main">
