--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -13,21 +13,25 @@
     <body>
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="/">Thoughts</a>
+                <h1 class="title"><a class="navbar-item" href="/">Thoughts</a></h1>
             </div>
             <div class="navbar-menu">
                 <div class="navbar-start">
                     {% if logged_in %}
                     <a class="navbar-item" href="/post">
-                        <!-- TODO: is "create" really the right word here? -->
-                        Create a post
+                        <button class="button">
+                            <!-- TODO: is "create" really the right word here? -->
+                            Create a post
+                        </button>
                     </a>
                     {% endif %}
                 </div>
                 <div class="navbar-end">
                     {% if logged_in %}
                     <a class="navbar-item" href="/disconnect">
-                        Disconnect
+                        <button class="button is-primary">
+                            Disconnect
+                        </button>
                     </a>
                     {% endif %}
                 </div>
