--- a/hackathon/templates/base.html
+++ b/hackathon/templates/base.html
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{% block title %}{% endblock %}</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"> -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-        {% block head %}
-        {% endblock %}
-    </head>
-    <body>
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-                <h1 class="title"><a class="navbar-item" href="/">Thoughts</a></h1>
+
+<head>
+    <title>{% block title %}{% endblock %}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+    {% block head %}
+    {% endblock %}
+</head>
+
+<body>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <h1 class="title"><a class="navbar-item" href="/">Thoughts</a></h1>
+        </div>
+        {% if logged_in %}
+        <div class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="/post">
+                    <button class="button">
+                        <!-- TODO: is "create" really the right word here? -->
+                        Create a post
+                    </button>
+                </a>
             </div>
-            <div class="navbar-menu">
-                <div class="navbar-start">
-                    {% if logged_in %}
-                    <a class="navbar-item" href="/post">
-                        <button class="button">
-                            <!-- TODO: is "create" really the right word here? -->
-                            Create a post
-                        </button>
-                    </a>
-                    {% endif %}
-                </div>
-                <div class="navbar-end">
-                    {% if logged_in %}
-                    <a class="navbar-item" href="/disconnect">
-                        <button class="button is-primary">
-                            Disconnect
-                        </button>
-                    </a>
-                    {% endif %}
-                </div>
+            <div class="navbar-end">
+                <a href="/profile" class="navbar-item">
+                    <button class="button">
+                        Profile
+                    </button>
+                </a>
+                <a href="/disconnect" class="navbar-item">
+                    <button class="button is-primary">
+                        Disconnect
+                    </button>
+                </a>
             </div>
-        </nav>
-        {% block body %}{% endblock %}
-    </body>
+        </div>
+        {% endif %}
+    </nav>
+    {% block body %}{% endblock %}
+</body>
+
 </html>
