add favicon inline or sm shit

--- a/hackathon/templates/index.html
+++ b/hackathon/templates/index.html
@@ -8,7 +8,7 @@
     <div id="landing">
         <h1>Welcome to 'thoughts'</h1>
         <p>A place for you to gather on your day and see what your friends are up to through text updates with auto-generated captions and animated characters.</p>
-		<p>Login with your <a href="https://vana.com" target="_blank">Vana</a> account:</p>
+		<p>Login with your <a href="https://vana.com" target="_blank"><img src="{{ url_for('static', filename='Vana_Favicon_32x32.png') }} " id="vanaIcon"> Vana</a> account:</p>
 		<br>
         <form id="submitEmail">
             <div class="control">
